Add description to argocd application helm chart

--- a/argocd/aad-pod-identity/Chart.yaml
+++ b/argocd/aad-pod-identity/Chart.yaml
@@ -2,6 +2,8 @@
 apiVersion: "v2"
 name: "aad-pod-identity"
 version: "0"
+description: |
+  This chart enables Kubernetes applications to access cloud resources securely with Azure Active Directory (AAD).
 dependencies:
   - name: "aad-pod-identity"
     version: "3.0.3"
