--- a/argocd/csi-secrets-store-provider-azure/Chart.yaml
+++ b/argocd/csi-secrets-store-provider-azure/Chart.yaml
@@ -2,6 +2,12 @@
 apiVersion: "v2"
 name: "csi-secrets-store-provider-azure"
 version: "0"
+description: |
+  This chart installs driver to interface with Azure Key Vault provider.
+  This driver enables:
+
+  * getting secrets from Azure Key Vault
+  * mounting secrets into Kubernetes pods
 dependencies:
   - name: "csi-secrets-store-provider-azure"
     version: "0.0.17"
