--- a/argocd/efs-provisioner/Chart.yaml
+++ b/argocd/efs-provisioner/Chart.yaml
@@ -2,6 +2,10 @@
 apiVersion: "v2"
 name: "efs-provisioner"
 version: "0"
+description: |
+  The chart installs provisioner enabling:
+
+  * mounting EFS storage as PersistentVolumes in kubernetes
 dependencies:
   - name: "efs-provisioner"
     version: "0.13.0"
