--- a/argocd/kube-prometheus-stack/Chart.yaml
+++ b/argocd/kube-prometheus-stack/Chart.yaml
@@ -2,6 +2,8 @@
 apiVersion: "v2"
 name: "kube-prometheus-stack"
 version: "0"
+description: |
+  This chart installs the kube-prometheus-stack and configures Grafana dashboards for monitoring Kubernetes cluster with Prometheus.
 dependencies:
   - name: "kube-prometheus-stack"
     version: "13.10.0"
