--- a/argocd/cert-manager/Chart.yaml
+++ b/argocd/cert-manager/Chart.yaml
@@ -2,6 +2,13 @@
 apiVersion: "v2"
 name: "cert-manager"
 version: "0"
+description: |
+  This chart installs and configures cert-manager.
+  cert-manager enables:
+
+  * management and issuance of TLS certificates from various issuing sources
+  * certificates validity
+  * renewal of certificates at an appropriate time before expiry
 dependencies:
   - name: "cert-manager"
     version: "1.1.1"
