--- a/argocd/loki-stack/Chart.yaml
+++ b/argocd/loki-stack/Chart.yaml
@@ -2,6 +2,9 @@
 apiVersion: "v2"
 name: "loki-stack"
 version: "0"
+description: |
+  This chart installs loki-stack. 
+  loki is the log aggregation system inspired by Prometheus.
 dependencies:
   - name: "loki-stack"
     version: "2.3.1"
