--- a/argocd/minio/Chart.yaml
+++ b/argocd/minio/Chart.yaml
@@ -2,6 +2,8 @@
 apiVersion: "v2"
 name: "minio"
 version: "0"
+description: |
+  This chart installs MinIO, a High Performance Object Storage.
 dependencies:
   - name: "minio"
     version: "8.0.3"
