--- a/argocd/traefik/Chart.yaml
+++ b/argocd/traefik/Chart.yaml
@@ -2,6 +2,8 @@
 apiVersion: "v2"
 name: "traefik"
 version: "0"
+description: |
+  This chart installs Traefik as the Kubernetes cluster Ingress Controller. 
 dependencies:
   - name: "traefik"
     version: "9.11.0"
