--- a/argocd/cert-manager/Chart.yaml
+++ b/argocd/cert-manager/Chart.yaml
@@ -7,7 +7,7 @@ description: |
   cert-manager enables:
 
   * management and issuance of TLS certificates from various issuing sources
-  * certificates validity
+  * ensuring certificates are valid and up to date
   * renewal of certificates at an appropriate time before expiry
 dependencies:
   - name: "cert-manager"
