--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -7,18 +7,23 @@ site:
   start_page: devops-stack::index.adoc
 content:
   branches: HEAD
-  tags: 
+  tags:
   - "v0.3*"
   - "!v0.3.0"
   sources:
   - url: ./
     start_path: docs
 ui:
-  bundle:
-    url: https://github.com/camptocamp/devops-stack-antora-ui/releases/download/master-LATEST/ui-bundle.zip
-    snapshot: true
-  supplemental_files:
-  - path: ui.yml
-    contents: |
-      static_files: [ .nojekyll ]
-  - path: .nojekyll
+  # bundle:
+  #   url: https://github.com/camptocamp/devops-stack-antora-ui/releases/download/master-LATEST/ui-bundle.zip
+  #   snapshot: true
+  # supplemental_files:
+  # - path: ui.yml
+  #   contents: |
+  #    static_files: [ .nojekyll ]
+  # - path: .nojekyll
+
+ bundle:
+   url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
+   snapshot: true
+ supplemental_files: docs/docs/supplemental_ui
