--- a/argocd/aad-pod-identity/values.yaml
+++ b/argocd/aad-pod-identity/values.yaml
@@ -1,11 +1,7 @@
 ---
-aad-pod-identity: 
-  # -- By default, AAD Pod Identity matches pods to identities across namespaces.
-  # To match only pods in the namespace containing AzureIdentity set this to true.
-  # [more](https://github.com/Azure/aad-pod-identity/blob/master/charts/aad-pod-identity/values.yaml)
-  forceNameSpaced: true
-  # -- Managed Identity Controller parameters.
-  # [more](https://github.com/Azure/aad-pod-identity/blob/master/charts/aad-pod-identity/values.yaml) 
+# -- Values passed to the add-pod-identity chart
+aad-pod-identity:
+  forceNameSpaced: true 
   mic:
     prometheusPort: 8888
     resources:
@@ -13,9 +9,6 @@ aad-pod-identity:
         memory: 32Mi
       requests:
         memory: 16Mi
-
-  # -- Node Managed Identity parameters.
-  # [more](https://github.com/Azure/aad-pod-identity/blob/master/charts/aad-pod-identity/values.yaml)
   nmi:
     prometheusPort: 9090
     resources:
