--- a/argocd/traefik/Chart.yaml
+++ b/argocd/traefik/Chart.yaml
@@ -3,7 +3,7 @@ apiVersion: "v2"
 name: "traefik"
 version: "0"
 description: |
-  This chart installs Traefik as the Kubernetes cluster Ingress Controller. 
+  This chart installs Traefik and configures it as the default Kubernetes cluster Ingress Controller. 
 dependencies:
   - name: "traefik"
     version: "9.11.0"
