Update charts with more detailed descriptions

--- a/argocd/aad-pod-identity/Chart.yaml
+++ b/argocd/aad-pod-identity/Chart.yaml
@@ -3,7 +3,9 @@ apiVersion: "v2"
 name: "aad-pod-identity"
 version: "0"
 description: |
-  This chart enables Kubernetes applications to access cloud resources securely with Azure Active Directory (AAD).
+  NOTE: This chart is enabled only when deploying DevOps Stack to AKS.
+
+  This chart enables assigning Azure Active Directory Identities to Kubernetes applications.
 dependencies:
   - name: "aad-pod-identity"
     version: "3.0.3"
