--- a/argocd/app-of-apps/Chart.yaml
+++ b/argocd/app-of-apps/Chart.yaml
@@ -3,4 +3,4 @@ apiVersion: "v2"
 name: "app-of-apps"
 version: "0"
 description: |
-  This chart and its subcharts install an app, as ArgoCD application.
+  This chart installs the [app-of-apps](https://argoproj.github.io/argo-cd/operator-manual/cluster-bootstrapping/#app-of-apps-pattern) declared in `argocd/apps` directory.
