--- a/argocd/efs-provisioner/values.yaml
+++ b/argocd/efs-provisioner/values.yaml
@@ -1,3 +1,3 @@
----
-# -- Values passed to the efs-provisioner chart
-efsProvisioner: {}
+# ---
+# # -- Values passed to the efs-provisioner chart
+# efsProvisioner: {}
