--- a/argocd/efs-provisioner/Chart.yaml
+++ b/argocd/efs-provisioner/Chart.yaml
@@ -7,8 +7,7 @@ description: |
   
   The chart installs a provisioner enabling:
   
-  * creation and management of `efs` StorageClass resources for dynamic PersistentVolumes in the kubernetes cluster
->>>>>>> Stashed changes
+  * creation and management of `efs` StorageClass for dynamic PersistentVolumes in the kubernetes cluster
 dependencies:
   - name: "efs-provisioner"
     version: "0.13.0"
