[CI] Publish Documentation for 5ee393d0175a75c329e935dea4ed187ea4870392 - 5ee393d0175a75c329e935dea4ed187ea4870392 🚀

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -25,9 +25,9 @@ banner:
         #- label: "SKS Quickstart"
         #  icon: "fas fa-mountain"
         #  link: "/docs/devops-stack/__VERSION__/howtos/quickstart_sks.html"
-        #- label: "OpenShift Quickstart"
-        #  icon: "fab fa-redhat"
-        #  link: "/docs/devops-stack/__VERSION__/howtos/quickstart_openshift.html"
+      - label: "OpenShift Quickstart"
+        icon: "fab fa-redhat"
+        link: "/docs/devops-stack/__VERSION__/howtos/quickstart_ocp_ipi_aws.html"
       - label: "K3S Quickstart"
         icon: "fa fa-hat-cowboy-side"
         link: "/docs/devops-stack/__VERSION__/howtos/quickstart_k3s_docker.html"
