[CI] Publish Documentation for eee0c74453a94a5abc40e3c417abbfcf91072f3f - eee0c74453a94a5abc40e3c417abbfcf91072f3f 🚀

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -153,7 +153,7 @@ call_to_action:
       link: "docs"
       icon: "fa fa-book"
     - label: "Request a demo"
-      link: "mailto:info@camptocamp.com?subject=DevOps Stack Demo"
+      link: "/contact"
       icon: "fa fa-chalkboard-teacher"
     - label: "Professional services"
       link: "https://www.camptocamp.com/infrastructure_solutions_and_services"
