--- a/argocd/keycloak/templates/keycloakuser.yaml
+++ b/argocd/keycloak/templates/keycloakuser.yaml
@@ -19,9 +19,9 @@ spec:
       - temporary: false
         type: password
         value: {{ .Values.keycloakUser.password }}
-    clientRoles:
-      account:
-        - manage-account
+    # clientRoles:
+    #   account:
+    #     - manage-account
   realmSelector:
     matchLabels:
       app: sso
