test: add view-profile role to oidc client

--- a/argocd/keycloak/templates/keycloakuser.yaml
+++ b/argocd/keycloak/templates/keycloakuser.yaml
@@ -22,6 +22,7 @@ spec:
     clientRoles:
       account:
         - manage-account
+        - view-profile
   realmSelector:
     matchLabels:
       app: sso
