test: add quatation marks for text

--- a/argocd/keycloak/templates/keycloakrealm.yaml
+++ b/argocd/keycloak/templates/keycloakrealm.yaml
@@ -12,7 +12,7 @@ spec:
     id: kubernetes
     realm: kubernetes
     enabled: true
-    displayName: Kubernetes Realm
+    displayName: "Kubernetes Realm"
   instanceSelector:
     matchLabels:
       app: sso
