--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -40,6 +40,7 @@ jobs:
         uses: ghost-420/antora-lunr-site-action@cc1c9e1b28e790816e49de6ae58f442ef119e6a2
         with:
           antora_playbook: antora-playbook.yml
+          ASGL: "antora-site-generator-lunr"
       - name: "List folder"
         run: |
           ls -ltr $GITHUB_WORKSPACE/build/
