Test (maybe) upstream contribution branch

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           fetch-depth: 0   # Fetch all history for .gitinfo and .lastmod
       - name: "Generate site using antora site action"
-        uses: ghost-420/antora-lunr-site-action@cc1c9e1b28e790816e49de6ae58f442ef119e6a2
+        uses: fsismondi/antora-site-action@upstream_contrib
         with:
           antora_playbook: antora-playbook.yml
       - name: "List folder"
