--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -3,7 +3,7 @@ name: Website
 on:
   push:
     branches: 
-      - master
+      - test_antora_site_action_with_docsearch
 env:
   SITE_DIR: 'site'
 jobs:
@@ -37,9 +37,11 @@ jobs:
         with:
           fetch-depth: 0   # Fetch all history for .gitinfo and .lastmod
       - name: "Generate site using antora site action"
-        uses: kameshsampath/antora-site-action@master
+        uses: fsismondi/antora-site-action@antora_generator_docsearch
         with:
           antora_playbook: antora-playbook.yml
+          #antora_docsearch_enabled: "true"
+          #antora_generator: "antora-site-generator-lunr"
       - name: "List folder"
         run: |
           ls -ltr $GITHUB_WORKSPACE/build/
